<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chathams_blue">

    <ImageView
        android:id="@+id/battleLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/battleships_game_logo"
        app:layout_constrainedHeight="true"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/battle_logo" />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:clickable="false"
        android:fontFamily="@font/maven_pro"
        android:gravity="center_horizontal"
        android:text="@string/textButtonStartGame"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/battleLogo"
        app:layout_constraintEnd_toStartOf="@+id/battleLogo"
        app:layout_constraintStart_toEndOf="@+id/battleLogo"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/buttonRules"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:fontFamily="@font/maven_pro"
        android:text="@string/textButtonRules"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonStartGame"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>